# iforgot

./: .gitignore  Cargo.toml  README.md  forgetfuldb.example.toml  iforgot-medium-draft.md
crates/forgetfuldb-agent/: Cargo.toml
crates/forgetfuldb-agent/src/: backend.rs  lib.rs  research.rs  supersede.rs  writer.rs
crates/forgetfuldb-cli/: Cargo.toml
crates/forgetfuldb-cli/src/: demo.rs  main.rs  schedule.rs
crates/forgetfuldb-cli/tests/: e2e.rs
crates/forgetfuldb-consolidate/: Cargo.toml
crates/forgetfuldb-consolidate/src/: lib.rs  summarize.rs
crates/forgetfuldb-core/: Cargo.toml
crates/forgetfuldb-core/src/: config.rs  contradiction.rs  decay.rs  epochs.rs  ids.rs  ingest.rs  lib.rs  salience.rs  scoring.rs  types.rs
crates/forgetfuldb-embed/: Cargo.toml
crates/forgetfuldb-embed/src/: lib.rs  ollama.rs
crates/forgetfuldb-prob/: Cargo.toml
crates/forgetfuldb-prob/src/: bloom.rs  cms.rs  hll.rs  lib.rs  reservoir.rs
crates/forgetfuldb-retrieve/: Cargo.toml
crates/forgetfuldb-retrieve/src/: lib.rs  traverse.rs
crates/forgetfuldb-segment/: Cargo.toml
crates/forgetfuldb-segment/benches/: segment_bench.rs
crates/forgetfuldb-segment/src/: lib.rs  predictor.rs  refine.rs  surprise.rs  threshold.rs
crates/forgetfuldb-segment/tests/: large_text_salience_eval.rs  validation.rs
crates/forgetfuldb-server/: Cargo.toml  build.rs
crates/forgetfuldb-server/src/: lib.rs  proxy.rs
crates/forgetfuldb-store/: Cargo.toml
crates/forgetfuldb-store/migrations/: 0001_init.sql  0002_chat_turns.sql  0003_consolidation_runs.sql  0004_store_meta.sql  0005_memory_edges.sql  0006_salience.sql  0007_foundation_type.sql  0008_epochs.sql  0009_memory_v2.sql
crates/forgetfuldb-store/src/: lib.rs  pipeline.rs
crates/forgetfuldb-tools/: Cargo.toml
crates/forgetfuldb-tools/src/: explore.rs  lib.rs  shell.rs
crates/iforgot-chat/: Cargo.toml
crates/iforgot-chat/src/: main.rs  markdown.rs  spinner.rs
docs/: HANDOFF.md  evolving-context.md  large-text-ingest.md  memory-architecture.md  surprise-segmentation.md
ui/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
ui/src/: App.tsx  api.ts  styles.css  usePoll.ts
ui/src/views/: ConflictsView.tsx  ConsolidationView.tsx  GraphView.tsx  MetricsView.tsx  RetrievalView.tsx
