[workspace]
resolver = "2"
members = [
    "crates/forgetfuldb-core",
    "crates/forgetfuldb-prob",
    "crates/forgetfuldb-embed",
    "crates/forgetfuldb-store",
    "crates/forgetfuldb-retrieve",
    "crates/forgetfuldb-consolidate",
    "crates/forgetfuldb-cli",
    "crates/forgetfuldb-server",
    "crates/forgetfuldb-agent",
    "crates/iforgot-chat",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/kishore-nikhil/iforgot"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
# No TLS features on purpose: the agent only ever talks plain HTTP to
# localhost (Ollama / llama-server), which keeps "local-only" enforceable
# at the dependency level.
reqwest = { version = "0.12", default-features = false, features = ["json", "stream"] }
futures-util = "0.3"
rustyline = "14"

forgetfuldb-core = { path = "crates/forgetfuldb-core" }
forgetfuldb-prob = { path = "crates/forgetfuldb-prob" }
forgetfuldb-embed = { path = "crates/forgetfuldb-embed" }
forgetfuldb-store = { path = "crates/forgetfuldb-store" }
forgetfuldb-retrieve = { path = "crates/forgetfuldb-retrieve" }
forgetfuldb-consolidate = { path = "crates/forgetfuldb-consolidate" }
forgetfuldb-server = { path = "crates/forgetfuldb-server" }
forgetfuldb-agent = { path = "crates/forgetfuldb-agent" }

[profile.release]
lto = "thin"
