[package]
name = "forgetfuldb-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Memory-wrapped chat loop: auto ingest/retrieve around a local LLM (Ollama or any OpenAI-compatible server)"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
forgetfuldb-core = { workspace = true }
forgetfuldb-embed = { workspace = true }
forgetfuldb-prob = { workspace = true }
forgetfuldb-store = { workspace = true }
forgetfuldb-retrieve = { workspace = true }
forgetfuldb-tools = { workspace = true }
