[package]
name = "forgetfuldb-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ForgetfulDB command-line interface"

[[bin]]
name = "forgetfuldb"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
forgetfuldb-core = { workspace = true }
forgetfuldb-embed = { workspace = true }
forgetfuldb-prob = { workspace = true }
forgetfuldb-store = { workspace = true }
forgetfuldb-retrieve = { workspace = true }
forgetfuldb-consolidate = { workspace = true }
forgetfuldb-server = { workspace = true }
