[package]
name = "forgetfuldb-consolidate"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Periodic memory compression: dedup, clustering, summarization, promotion, archiving for ForgetfulDB"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
forgetfuldb-core = { workspace = true }
forgetfuldb-embed = { workspace = true }
forgetfuldb-prob = { workspace = true }
forgetfuldb-store = { workspace = true }
