[package]
name = "forgetfuldb-retrieve"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Hybrid memory retrieval (vector + keyword + recency + importance + decay) for ForgetfulDB"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
forgetfuldb-core = { workspace = true }
forgetfuldb-embed = { workspace = true }
forgetfuldb-store = { workspace = true }
