[package]
name = "forgetfuldb-segment"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tier-2 embedding-space surprise segmentation for ForgetfulDB (prediction-error boundaries, EM-LLM rolling threshold, modularity refinement; no LLM)"

[dependencies]
forgetfuldb-core = { workspace = true }
forgetfuldb-embed = { workspace = true }

[[bench]]
name = "segment_bench"
harness = false
