[package]
name = "forgetfuldb-store"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SQLite persistence layer for ForgetfulDB"

[dependencies]
anyhow = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
forgetfuldb-core = { workspace = true }
forgetfuldb-embed = { workspace = true }
forgetfuldb-prob = { workspace = true }
