[package]
name = "forgetfuldb-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pluggable tool interface for ForgetfulDB (shell execution and future custom tools)"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
forgetfuldb-core = { workspace = true }
