[package]
name = "iforgot-chat"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "iForgot: casual terminal chat with a local LLM and automatic long-term memory"

[[bin]]
name = "iforgot"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
rustyline = { workspace = true }
forgetfuldb-core = { workspace = true }
forgetfuldb-store = { workspace = true }
forgetfuldb-consolidate = { workspace = true }
forgetfuldb-agent = { workspace = true }
